# dbsp

./: Cargo.toml  Earthfile  all.txt  consume.sps  line-len  openapi.json  test-kafka
.devcontainer/: devcontainer.json  setup.sh
benchmark/: README.md  analysis.sps  suite.mk
benchmark/feldera-sql/: run.py
benchmark/feldera-sql/benchmarks/nexmark/: table.sql
crates/adapters/: Cargo.toml
crates/adapters/src/: catalog.rs  deinput.rs  util.rs
crates/adapters/src/controller/: error.rs  metadata.rs  mod.rs  stats.rs
crates/adapters/src/format/: csv.rs  mod.rs
crates/adapters/src/server/: mod.rs
crates/adapters/src/static_compile/: catalog.rs  deinput.rs  serialize_with_context.rs  seroutput.rs
crates/adapters/src/test/: data.rs  kafka.rs  mock_dezset.rs  mock_input_consumer.rs  mod.rs  model_test.rs
crates/adapters/src/transport/: datagen.rs  file.rs  mod.rs  nexmark.rs  url.rs
crates/dataflow-jit/: Cargo.toml
crates/dataflow-jit/src/: row.rs
crates/dbsp/: Cargo.toml
crates/dbsp/benches/: column_layer.rs  fraud.rs  path.rs
crates/dbsp/examples/: orgchart.rs
crates/dbsp/examples/coord/: main.rs
crates/dbsp/examples/pool/: main.rs  service.rs
crates/dbsp/examples/tutorial/: 1.rs  2.rs  3.rs  4.rs  5.rs  README.md  main.rs  tutorial2.rs  tutorial3.rs  tutorial4.rs  tutorial5.rs  tutorial6.rs  tutorial7.rs  tutorial8.rs  (+1 more)
crates/dbsp/src/: lib.rs  tutorial.rs  typed_batch.rs
crates/feldera-storage/: Cargo.toml
crates/feldera-storage/proptest-regressions/: writer.txt
crates/feldera-storage/proptest-regressions/backend/: mod.txt
crates/feldera-storage/proptest-regressions/column_layer/: mod.txt  persist.txt
crates/feldera-storage/proptest-regressions/ordered_layer/: persist.txt
crates/feldera-storage/src/: lib.rs  utils.rs
crates/feldera-storage/src/backend/: fs.rs  memory_impl.rs  metadata.rs  mod.rs  posixio_impl.rs  uring.rs
crates/feldera-storage/src/backend/glommio_impl/: mod.rs
crates/feldera-storage/src/backend/monoio_impl/: mod.rs
crates/feldera-storage/src/buffer_cache/: cache.rs
crates/feldera-storage/src/column_layer/: builders.rs  cursor.rs  mod.rs
crates/feldera-storage/src/file/: mod.rs  reader.rs  writer.rs
crates/feldera-storage/src/ordered_layer/: builders.rs  cursor.rs  mod.rs
crates/feldera-types/src/: config.rs
crates/nexmark/: Cargo.toml
crates/nexmark/examples/: consume.rs
crates/nexmark/src/: model.rs
crates/pipeline-manager/src/: compiler.rs
demo/: __init__.py  create_demo_projects.sh  prepare-demos.sh  prepare_demo_data.sh
demo/project_demo00-SecOps/: run.py
demo/project_demo12-HopsworksTikTokRecSys/: 1_pipeline.py  config.py
deploy/: docker-compose.yml
docs/: docusaurus.config.js
docs/contributors/: compiler.md
docs/docs/demos/: secops.md  simple-select.md
python/: test.py
python/dbsp/: connection.py
sql-to-dbsp-compiler/: README.md
sql-to-dbsp-compiler/lib/readers/: Cargo.toml
sql-to-dbsp-compiler/lib/sqllib/: Cargo.toml
sql-to-dbsp-compiler/temp/: Cargo.toml
(+198 files in other folders)
