[package]
name = "feldera-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7.42", default-features = false, features = ["std", "size_64", "validation"] }
arcstr = { version = "1.1.5" }
size-of = { version = "0.1.5", features = ["hashbrown", "time-std", "xxhash-xxh3", "arcstr", "chrono", "ordered-float"] }
rand = "0.8.5"
textwrap = "0.15.0"
log = "0.4.20"
binrw = "0.13.3"
internet-checksum = "0.2.1"
crc32c = "0.6.4"
thiserror = "1.0.50"
hexdump = "0.1.1"
num-derive = "0.4.1"
num = "0.4.1"
num-traits = "0.2.17"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[dev-dependencies]
proptest-derive = { version = "0.3.0" }
proptest = { version = "1.0.0" }
